<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nprofilepic"
        android:layout_width="96dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_height="96dp"
        android:src="@drawable/avtar"
        app:civ_border_width="2dp"
        app:civ_border_color="#862797"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/username"
        android:id="@+id/nusername"
        android:textSize="30sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_a_request_start_chating"
            android:id="@+id/nmsg"
            android:textSize="19sp"/>


        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#E86E48"
            android:layout_marginStart="110dp"
            android:text="@string/accept"
            android:textColor="#212121"
            android:textSize="15sp" />

    </LinearLayout>




</LinearLayout>